# docs/swagger.json
@@ -1,11 +1,25 @@
 {
+    "schemes": [
+        "http",
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "Generic Description",
+        "title": "Purchasing System API",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "127.0.0.1:8082",
+    "basePath": "/api/",
     "paths": {
         "/api/manufacturers": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieves a list of manufacturers from the database",
                 "consumes": [
                     "application/json"
@@ -17,6 +31,15 @@
                     "manufacturers"
                 ],
                 "summary": "List manufacturers",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "List of manufacturers",
@@ -38,6 +61,11 @@
         },
         "/api/productdelete": {
             "post": {
+                "security": [
+                    {
+                        "X-API-Key": []
+                    }
+                ],
                 "description": "Deletes a product from the database based on its SKU",
                 "consumes": [
                     "application/json"
@@ -65,6 +93,11 @@
         },
         "/api/productinsert": {
             "post": {
+                "security": [
+                    {
+                        "X-API-Key": []
+                    }
+                ],
                 "description": "Adds a new product to the database",
                 "consumes": [
                     "application/json"
@@ -92,6 +125,11 @@
         },
         "/api/products": {
             "get": {
+                "security": [
+                    {
+                        "X-API-Key": []
+                    }
+                ],
                 "description": "Retrieves a list of products, with optional filtering parameters",
                 "consumes": [
                     "application/json"
@@ -198,6 +236,11 @@
         },
         "/api/productupdate": {
             "post": {
+                "security": [
+                    {
+                        "X-API-Key": []
+                    }
+                ],
                 "description": "Updates fields of a product in the database with the given SKU; only provided fields are updated",
                 "consumes": [
                     "application/json"
@@ -407,6 +450,13 @@
                     "type": "number"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "X-API-Key",
+            "in": "header"
         }
     }
 }
